Business/Grammars/LogicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Logic.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class LogicParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, COMMENT=2, OPEN_PAREN=3, CLOSE_PAREN=4, COMMA=5, SEMICOLON=6, 
		AND=7, OR=8, IMP=9, BICOND=10, NEG=11, XOR=12, IDENTITY=13, ATOM=14, CONSTANT=15, 
		VARIABLE=16, EXISTENTIAL=17, UNIVERSAL=18, THEREFORE=19, SEMANTIC_ENTAILMENT=20;
	public const int
		RULE_program = 0, RULE_atom = 1, RULE_propositionalWff = 2, RULE_propWff = 3, 
		RULE_propNegRule = 4, RULE_propAndRule = 5, RULE_propOrRule = 6, RULE_propImpRule = 7, 
		RULE_propBicondRule = 8, RULE_propExclusiveOrRule = 9, RULE_constant = 10, 
		RULE_variable = 11, RULE_universal = 12, RULE_existential = 13, RULE_predicate = 14, 
		RULE_predicateWff = 15, RULE_predWff = 16, RULE_predQuantifier = 17, RULE_predNegRule = 18, 
		RULE_predAndRule = 19, RULE_predOrRule = 20, RULE_predImpRule = 21, RULE_predBicondRule = 22, 
		RULE_predExclusiveOrRule = 23, RULE_predIdentityRule = 24, RULE_predPremise = 25, 
		RULE_predConclusion = 26, RULE_predProof = 27, RULE_propPremise = 28, 
		RULE_propConclusion = 29, RULE_propProof = 30, RULE_predSemanticEntailment = 31, 
		RULE_propSemanticEntailment = 32;
	public static readonly string[] ruleNames = {
		"program", "atom", "propositionalWff", "propWff", "propNegRule", "propAndRule", 
		"propOrRule", "propImpRule", "propBicondRule", "propExclusiveOrRule", 
		"constant", "variable", "universal", "existential", "predicate", "predicateWff", 
		"predWff", "predQuantifier", "predNegRule", "predAndRule", "predOrRule", 
		"predImpRule", "predBicondRule", "predExclusiveOrRule", "predIdentityRule", 
		"predPremise", "predConclusion", "predProof", "propPremise", "propConclusion", 
		"propProof", "predSemanticEntailment", "propSemanticEntailment"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'('", "')'", "','", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "COMMENT", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", "SEMICOLON", 
		"AND", "OR", "IMP", "BICOND", "NEG", "XOR", "IDENTITY", "ATOM", "CONSTANT", 
		"VARIABLE", "EXISTENTIAL", "UNIVERSAL", "THEREFORE", "SEMANTIC_ENTAILMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Logic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LogicParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LogicParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LogicParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PredProofContext predProof() {
			return GetRuleContext<PredProofContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LogicParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropProofContext propProof() {
			return GetRuleContext<PropProofContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredSemanticEntailmentContext predSemanticEntailment() {
			return GetRuleContext<PredSemanticEntailmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropSemanticEntailmentContext propSemanticEntailment() {
			return GetRuleContext<PropSemanticEntailmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropositionalWffContext[] propositionalWff() {
			return GetRuleContexts<PropositionalWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropositionalWffContext propositionalWff(int i) {
			return GetRuleContext<PropositionalWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(LogicParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PredicateWffContext[] predicateWff() {
			return GetRuleContexts<PredicateWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateWffContext predicateWff(int i) {
			return GetRuleContext<PredicateWffContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 66;
				predProof();
				State = 67;
				Match(Eof);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 69;
				propProof();
				State = 70;
				Match(Eof);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 72;
				predSemanticEntailment();
				State = 73;
				Match(Eof);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 75;
				propSemanticEntailment();
				State = 76;
				Match(Eof);
				}
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				{
				State = 78;
				propositionalWff();
				State = 79;
				Match(COMMA);
				State = 80;
				propositionalWff();
				State = 81;
				Match(Eof);
				}
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				{
				State = 83;
				predicateWff();
				State = 84;
				Match(COMMA);
				State = 85;
				predicateWff();
				State = 86;
				Match(Eof);
				}
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				{
				State = 88;
				propositionalWff();
				State = 89;
				Match(Eof);
				}
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				{
				State = 91;
				predicateWff();
				State = 92;
				Match(Eof);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ATOM() { return GetToken(LogicParser.ATOM, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterAtom(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitAtom(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 2, RULE_atom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(ATOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropositionalWffContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff() {
			return GetRuleContext<PropWffContext>(0);
		}
		public PropositionalWffContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propositionalWff; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropositionalWff(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropositionalWff(this);
		}
	}

	[RuleVersion(0)]
	public PropositionalWffContext propositionalWff() {
		PropositionalWffContext _localctx = new PropositionalWffContext(Context, State);
		EnterRule(_localctx, 4, RULE_propositionalWff);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			propWff();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropWffContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropNegRuleContext propNegRule() {
			return GetRuleContext<PropNegRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropAndRuleContext propAndRule() {
			return GetRuleContext<PropAndRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropOrRuleContext propOrRule() {
			return GetRuleContext<PropOrRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropImpRuleContext propImpRule() {
			return GetRuleContext<PropImpRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropBicondRuleContext propBicondRule() {
			return GetRuleContext<PropBicondRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropExclusiveOrRuleContext propExclusiveOrRule() {
			return GetRuleContext<PropExclusiveOrRuleContext>(0);
		}
		public PropWffContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propWff; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropWff(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropWff(this);
		}
	}

	[RuleVersion(0)]
	public PropWffContext propWff() {
		PropWffContext _localctx = new PropWffContext(Context, State);
		EnterRule(_localctx, 6, RULE_propWff);
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 100;
				atom();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 101;
				propNegRule();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 102;
				propAndRule();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 103;
				propOrRule();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 104;
				propImpRule();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 105;
				propBicondRule();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 106;
				propExclusiveOrRule();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropNegRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEG() { return GetToken(LogicParser.NEG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff() {
			return GetRuleContext<PropWffContext>(0);
		}
		public PropNegRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propNegRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropNegRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropNegRule(this);
		}
	}

	[RuleVersion(0)]
	public PropNegRuleContext propNegRule() {
		PropNegRuleContext _localctx = new PropNegRuleContext(Context, State);
		EnterRule(_localctx, 8, RULE_propNegRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(NEG);
			State = 110;
			propWff();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropAndRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PAREN() { return GetToken(LogicParser.OPEN_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext[] propWff() {
			return GetRuleContexts<PropWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff(int i) {
			return GetRuleContext<PropWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(LogicParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PAREN() { return GetToken(LogicParser.CLOSE_PAREN, 0); }
		public PropAndRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propAndRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropAndRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropAndRule(this);
		}
	}

	[RuleVersion(0)]
	public PropAndRuleContext propAndRule() {
		PropAndRuleContext _localctx = new PropAndRuleContext(Context, State);
		EnterRule(_localctx, 10, RULE_propAndRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			Match(OPEN_PAREN);
			State = 113;
			propWff();
			State = 114;
			Match(AND);
			State = 115;
			propWff();
			State = 116;
			Match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropOrRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PAREN() { return GetToken(LogicParser.OPEN_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext[] propWff() {
			return GetRuleContexts<PropWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff(int i) {
			return GetRuleContext<PropWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(LogicParser.OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PAREN() { return GetToken(LogicParser.CLOSE_PAREN, 0); }
		public PropOrRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propOrRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropOrRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropOrRule(this);
		}
	}

	[RuleVersion(0)]
	public PropOrRuleContext propOrRule() {
		PropOrRuleContext _localctx = new PropOrRuleContext(Context, State);
		EnterRule(_localctx, 12, RULE_propOrRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(OPEN_PAREN);
			State = 119;
			propWff();
			State = 120;
			Match(OR);
			State = 121;
			propWff();
			State = 122;
			Match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropImpRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PAREN() { return GetToken(LogicParser.OPEN_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext[] propWff() {
			return GetRuleContexts<PropWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff(int i) {
			return GetRuleContext<PropWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMP() { return GetToken(LogicParser.IMP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PAREN() { return GetToken(LogicParser.CLOSE_PAREN, 0); }
		public PropImpRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propImpRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropImpRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropImpRule(this);
		}
	}

	[RuleVersion(0)]
	public PropImpRuleContext propImpRule() {
		PropImpRuleContext _localctx = new PropImpRuleContext(Context, State);
		EnterRule(_localctx, 14, RULE_propImpRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(OPEN_PAREN);
			State = 125;
			propWff();
			State = 126;
			Match(IMP);
			State = 127;
			propWff();
			State = 128;
			Match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropBicondRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PAREN() { return GetToken(LogicParser.OPEN_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext[] propWff() {
			return GetRuleContexts<PropWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff(int i) {
			return GetRuleContext<PropWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BICOND() { return GetToken(LogicParser.BICOND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PAREN() { return GetToken(LogicParser.CLOSE_PAREN, 0); }
		public PropBicondRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propBicondRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropBicondRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropBicondRule(this);
		}
	}

	[RuleVersion(0)]
	public PropBicondRuleContext propBicondRule() {
		PropBicondRuleContext _localctx = new PropBicondRuleContext(Context, State);
		EnterRule(_localctx, 16, RULE_propBicondRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			Match(OPEN_PAREN);
			State = 131;
			propWff();
			State = 132;
			Match(BICOND);
			State = 133;
			propWff();
			State = 134;
			Match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropExclusiveOrRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PAREN() { return GetToken(LogicParser.OPEN_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext[] propWff() {
			return GetRuleContexts<PropWffContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropWffContext propWff(int i) {
			return GetRuleContext<PropWffContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode XOR() { return GetToken(LogicParser.XOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PAREN() { return GetToken(LogicParser.CLOSE_PAREN, 0); }
		public PropExclusiveOrRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propExclusiveOrRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterPropExclusiveOrRule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitPropExclusiveOrRule(this);
		}
	}

	[RuleVersion(0)]
	public PropExclusiveOrRuleContext propExclusiveOrRule() {
		PropExclusiveOrRuleContext _localctx = new PropExclusiveOrRuleContext(Context, State);
		EnterRule(_localctx, 18, RULE_propExclusiveOrRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			Match(OPEN_PAREN);
			State = 137;
			propWff();
			State = 138;
			Match(XOR);
			State = 139;
			propWff();
			State = 140;
			Match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONSTANT() { return GetToken(LogicParser.CONSTANT, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.EnterConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogicListener typedListener = listener as ILogicListener;
			if (typedListener != null) typedListener.ExitConstant(this);
		}
	}
